--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">FrenshiChatBotAndroidApp</string>
     <string name="send_button">Send</string>
-    <string name="user_input_text">Write your text here…</string>
+    <string name="user_input_text">Posez-moi une question…</string>
     <string name="typing">Typing…</string>
     <string name="empty"> </string>
+    <string name="caractere_number_default">0/2000</string>
 </resources>
