--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">FrenshiChatBotAndroidApp</string>
-    <string name="frenshi"> F </string>
+    <string name="app_name" translatable="false">FrenshiChatBotAndroidApp</string>
+    <string name="frenshi" translatable="false"> F </string>
     <string name="typingEN">Typing…</string>
-    <string name="empty"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis erat nunc, tincidunt eget porttitor sed, consequat ac enim. </string>
-    <string name="default_time"> 00:00 </string>
+    <string name="empty" translatable="false"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis erat nunc, tincidunt eget porttitor sed, consequat ac enim. </string>
+    <string name="default_time" translatable="false"> 00:00 </string>
     <string name="default_user_inputEN"> Ask me a question.. </string>
-    <string name="Button_content_description_EN"> Send button.. </string>
-    <string name="number_characters_default">0/2000</string>
+    <string name="Button_content_description_EN"> Send button </string>
 </resources>
