Rectify model prediction and improve icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">FrenshiChatBotAndroidApp</string>
+    <string name="app_name" translatable="false">FrenShi</string>
     <string name="frenshi" translatable="false"> F </string>
     <string name="typingEN">Typing…</string>
     <string name="greeting_frenShiEN">Welcome! I\'m Frenshi! I\'m here to help you with your administrative formalities in France. Administrative formalities can be a real headache, especially for foreign students arriving in a new country. But don\'t worry! I\'ve got you covered! To get started, please select one of the following options:\nValidate my visa, resident permit, CAF or health insurance.</string>
